--- a/OOF Backend/src/main/resources/application.properties
+++ b/OOF Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8081
+server.port=8089
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/oof_badminton?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Doducduong14
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
